# statistical_rethinking_a_bayesian_course

./: .gitignore  README.md  pyproject.toml
helpers/: pandas.py  paths.py  quap_like.py
notebooks/: 02_bayesian_analysis.ipynb  03_sampling_the_imaginary.ipynb  04_geocentric_models.ipynb  05_multiple_regression.ipynb
