[tool.poetry]
name = "statistical-rethinking-a-bayesian-course"
version = "0.1.0"
description = "Working through the textbook, adapting R to Python on my own."
authors = ["beckspark <stephenpbeck@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
numpy = ">=1.17.0,<2"
ipykernel = "^6.29.5"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
packaging = "==21.3"
pymc = "^5.18.0"
ipywidgets = "^8.1.5"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
