[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "statistical-rethinking-a-bayesian-course"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "arviz>=0.20.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "pymc>=5.19.1",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["helpers"]
